--- a/src/shared/styles/fonts.scss
+++ b/src/shared/styles/fonts.scss
@@ -3,7 +3,9 @@
     font-family: $font-family;
     font-style: $font-style;
     font-weight: $font-weight;
-    src: url('../../../public/fonts/#{$file-name}.ttf') format('truetype'), url('../../../public/fonts/#{$file-name}.woff2') format('woff2'),
+    src:
+      url('../../../public/fonts/#{$file-name}.ttf') format('truetype'),
+      url('../../../public/fonts/#{$file-name}.woff2') format('woff2'),
       url('../../../public/fonts/#{$file-name}.woff') format('woff');
   }
 }
