--- a/src/app/global.css
+++ b/src/app/global.css
@@ -19,3 +19,28 @@
     @apply bg-red;
   }
 }
+
+@layer components {
+  .base-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding-right: 80px;
+    padding-left: 80px;
+
+    @media (width <= 1250px) {
+      padding-right: 45px;
+      padding-left: 45px;
+    }
+
+    @media (width <= 768px) {
+      padding-right: 30px;
+      padding-left: 30px;
+    }
+  }
+
+  .base-inner {
+    width: 100%;
+    max-width: 1920px;
+  }
+}
