changed media rule for scss

--- a/src/layouts/Project/Project.module.scss
+++ b/src/layouts/Project/Project.module.scss
@@ -18,7 +18,7 @@
     content: url('/icons/arrow.svg');
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     position: static;
   }
 }
