--- a/src/shared/components/AboutUs/AboutUs.module.scss
+++ b/src/shared/components/AboutUs/AboutUs.module.scss
@@ -7,22 +7,22 @@
   margin-top: 60px;
   margin-bottom: 140px;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     max-width: 812px;
     height: 1200px;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     max-width: 624px;
     height: 1000px;
   }
 
-  @media (width <= 1100px) {
+  @media (max-width: 1100px) {
     margin-top: 30px;
     margin-bottom: 50px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     max-width: 403px;
     height: 700px;
   }
@@ -37,16 +37,16 @@
   width: 350px;
   height: auto;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     left: 0;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     top: 91px;
     width: 263px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     top: 97px;
     width: 175px;
   }
@@ -61,24 +61,24 @@
   width: 420px;
   height: auto;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     right: 0;
     left: 0;
     margin-right: auto;
     margin-left: auto;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     top: 13px;
     width: 315px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     top: 45px;
     width: 210px;
   }
 
-  @media (width <= 380px) {
+  @media (max-width: 380px) {
     top: -220px;
   }
 }
@@ -92,16 +92,16 @@
   width: 370px;
   height: auto;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     right: 0;
     left: auto;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     width: 278px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     width: 185px;
   }
 }
@@ -113,12 +113,12 @@
   height: 1200px;
   margin: 0 auto;
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     max-width: 470px;
     height: 1000px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     max-width: 315px;
     height: 700px;
   }
@@ -133,17 +133,17 @@
   width: 350px;
   height: auto;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     top: auto;
     bottom: 0;
     left: 0;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     width: 263px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     width: 175px;
   }
 }
@@ -156,17 +156,17 @@
   width: 400px;
   height: auto;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     right: 0;
     bottom: 48px;
   }
 
-  @media (width <= 1200px) {
+  @media (max-width: 1200px) {
     bottom: 36px;
     width: 300px;
   }
 
-  @media (width <= 700px) {
+  @media (max-width: 700px) {
     bottom: 24px;
     width: 200px;
   }
@@ -181,7 +181,7 @@
   background-image: url('/img/white-dots.svg');
   background-repeat: no-repeat;
 
-  @media (width <= 1430px) {
+  @media (max-width: 1430px) {
     display: none;
   }
 }
