--- a/src/app/global.css
+++ b/src/app/global.css
@@ -28,12 +28,12 @@
     padding-right: 80px;
     padding-left: 80px;
 
-    @media (width <= 1250px) {
+    @media (max-width: 1250px) {
       padding-right: 45px;
       padding-left: 45px;
     }
 
-    @media (width <= 768px) {
+    @media (max-width: 768px) {
       padding-right: 30px;
       padding-left: 30px;
     }
