style edits for checkbox, dropdown, footer and contact us

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -4,7 +4,7 @@
 
 @layer base {
   h1 {
-    @apply font-rammetto-one text-[54px] text-red max-[900px]:text-[36px] max-[400px]:text-[36px];
+    @apply font-rammetto-one text-[54px] leading-[104%] text-red max-[900px]:text-[36px] max-[400px]:text-[36px];
   }
 
   ::-webkit-scrollbar {
