--- a/src/app/global.css
+++ b/src/app/global.css
@@ -43,4 +43,19 @@
     width: 100%;
     max-width: 1920px;
   }
+
+  .landing-paddings {
+    padding-right: 80px;
+    padding-left: 400px;
+
+    @media (max-width: 1100px) {
+      padding-right: 50px;
+      padding-left: 50px;
+    }
+
+    @media (max-width: 500px) {
+      padding-right: 20px;
+      padding-left: 20px;
+    }
+  }
 }
