--- a/src/app/global.css
+++ b/src/app/global.css
@@ -28,12 +28,12 @@
     padding-right: 80px;
     padding-left: 80px;
 
-    @media (max-width: 1250px) {
+    @media (width <= 1250px) {
       padding-right: 45px;
       padding-left: 45px;
     }
 
-    @media (max-width: 768px) {
+    @media (width <= 768px) {
       padding-right: 30px;
       padding-left: 30px;
     }
@@ -48,12 +48,12 @@
     padding-right: 80px;
     padding-left: 400px;
 
-    @media (max-width: 1100px) {
+    @media (width <= 1100px) {
       padding-right: 50px;
       padding-left: 50px;
     }
 
-    @media (max-width: 500px) {
+    @media (width <= 500px) {
       padding-right: 20px;
       padding-left: 20px;
     }
