--- a/src/layouts/Project/Project.module.css
+++ b/src/layouts/Project/Project.module.css
@@ -9,7 +9,7 @@
   line-height: 280%;
   cursor: pointer;
 
-  @media (max-width: 1200px) {
+  @media (width <= 1200px) {
     position: static;
   }
 }
