--- a/src/shared/components/AccentButton/AccentButton.module.css
+++ b/src/shared/components/AccentButton/AccentButton.module.css
@@ -8,7 +8,7 @@
   line-height: 94%;
   transition: all 0.5s;
 
-  @media (max-width: 1100px) {
+  @media (width <= 1100px) {
     max-width: 200px;
     padding: 20px 50px;
     font-size: 22px;
