--- a/src/shared/components/ActionDonuts/ActionDonuts.module.css
+++ b/src/shared/components/ActionDonuts/ActionDonuts.module.css
@@ -7,7 +7,7 @@
   background-repeat: repeat;
   background-size: 115px;
 
-  @media (max-width: 1100px) {
+  @media (width <= 1100px) {
     position: absolute;
   }
 }
