--- a/src/shared/components/HowItWorks/HowItWorks.module.css
+++ b/src/shared/components/HowItWorks/HowItWorks.module.css
@@ -2,7 +2,7 @@
   height: 66px;
   cursor: default;
 
-  @media (max-width: 730px) {
+  @media (width <= 730px) {
     height: auto;
   }
 }
@@ -10,7 +10,7 @@
 .item:hover > div:last-child {
   transform: rotateX(0) translateZ(10px) translateY(-66px);
 
-  @media (max-width: 730px) {
+  @media (width <= 730px) {
     transform: none;
   }
 }
@@ -18,7 +18,7 @@
 .item:hover > div:first-child {
   transform: rotateX(90deg) translateZ(33px);
 
-  @media (max-width: 730px) {
+  @media (width <= 730px) {
     transform: none;
   }
 }
@@ -31,20 +31,20 @@
   transition: transform 0.5s linear;
   transition-delay: 0.1s;
 
-  @media (max-width: 1360px) {
+  @media (width <= 1360px) {
     font-size: 34px;
   }
 
-  @media (max-width: 730px) {
+  @media (width <= 730px) {
     height: auto;
     transition: none;
   }
 
-  @media (max-width: 600px) {
+  @media (width <= 600px) {
     font-size: 32px;
   }
 
-  @media (max-width: 500px) {
+  @media (width <= 500px) {
     font-size: 24px;
   }
 }
@@ -61,11 +61,11 @@
   transition-delay: 0.1s;
   transform: rotateX(-90deg) translateZ(-40px);
 
-  @media (max-width: 1200px) {
+  @media (width <= 1200px) {
     padding: 0 20px;
   }
 
-  @media (max-width: 730px) {
+  @media (width <= 730px) {
     height: auto;
     padding: 0;
     background-color: transparent;
