--- a/src/shared/components/Stack/Stack.module.css
+++ b/src/shared/components/Stack/Stack.module.css
@@ -4,7 +4,7 @@
 }
 
 .img:first-child {
-  @media (max-width: 850px) {
+  @media (width <= 850px) {
     max-width: 65%;
   }
 }
@@ -16,7 +16,7 @@
 .img:nth-child(3) {
   transition-delay: 500ms;
 
-  @media (max-width: 850px) {
+  @media (width <= 850px) {
     max-width: 50%;
   }
 }
@@ -24,11 +24,11 @@
 .img:not(:first-child) {
   margin-top: -30px;
 
-  @media (max-width: 850px) {
+  @media (width <= 850px) {
     margin-top: -20px;
   }
 
-  @media (max-width: 850px) {
+  @media (width <= 850px) {
     margin-top: -10px;
   }
 }
