--- a/src/app/global.css
+++ b/src/app/global.css
@@ -4,11 +4,11 @@
 
 @layer base {
   h1 {
-    @apply font-rammetto-one text-[54px] leading-[104%] text-red max-[900px]:text-[36px] max-[400px]:text-[36px];
+    @apply font-rammetto-one text-[3.375rem] leading-[104%] text-red max-[900px]:text-[2.25rem] max-[400px]:text-[2.25rem];
   }
 
   ::-webkit-scrollbar {
-    @apply w-[5px];
+    @apply w-[0.3125rem];
   }
 
   ::-webkit-scrollbar-track {
@@ -25,37 +25,37 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding-right: 80px;
-    padding-left: 80px;
+    padding-right: 5rem;
+    padding-left: 5rem;
 
     @media (width <= 1250px) {
-      padding-right: 45px;
-      padding-left: 45px;
+      padding-right: 2.8125rem;
+      padding-left: 2.8125rem;
     }
 
     @media (width <= 768px) {
-      padding-right: 30px;
-      padding-left: 30px;
+      padding-right: 1.875rem;
+      padding-left: 1.875rem;
     }
   }
 
   .base-inner {
     width: 100%;
-    max-width: 1920px;
+    max-width: 120rem;
   }
 
   .landing-paddings {
-    padding-right: 80px;
-    padding-left: 400px;
+    padding-right: 5rem;
+    padding-left: 25rem;
 
     @media (width <= 1100px) {
-      padding-right: 50px;
-      padding-left: 50px;
+      padding-right: 3.125rem;
+      padding-left: 3.125rem;
     }
 
     @media (width <= 500px) {
-      padding-right: 20px;
-      padding-left: 20px;
+      padding-right: 1.25rem;
+      padding-left: 1.25rem;
     }
   }
 }
