--- a/src/layouts/Project/Project.module.css
+++ b/src/layouts/Project/Project.module.css
@@ -4,21 +4,21 @@
   left: 0;
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-weight: bold;
   line-height: 280%;
   cursor: pointer;
 
-  @media (width <= 1200px) {
+  @media (width <= 75rem) {
     position: static;
   }
 }
 
 .previous::before {
   display: block;
-  width: 40px;
-  height: 40px;
-  margin-right: 23px;
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 1.4375rem;
   text-align: center;
   content: url('/icons/arrow.svg');
 }
