--- a/src/shared/components/ActionDonuts/ActionDonuts.module.css
+++ b/src/shared/components/ActionDonuts/ActionDonuts.module.css
@@ -2,12 +2,12 @@
   z-index: 1;
   display: flex;
   width: 100%;
-  max-width: 1920px;
+  max-width: 120rem;
   height: 100%;
   background-repeat: repeat;
-  background-size: 115px;
+  background-size: 7.1875rem;
 
-  @media (width <= 1100px) {
+  @media (width <= 68.75rem) {
     position: absolute;
   }
 }
@@ -15,12 +15,12 @@
 .column1 {
   display: flex;
   flex-shrink: 0;
-  width: 150px;
+  width: 9.375rem;
   height: 100%;
   overflow: hidden;
   background-image: url('/img/mini-donut.svg');
   background-repeat: repeat-y;
-  background-position: 20px 20px;
+  background-position: 1.25rem 1.25rem;
   animation: marquee1 50s infinite linear;
 }
 
@@ -37,12 +37,12 @@
 .column2 {
   display: flex;
   flex-shrink: 0;
-  width: 150px;
+  width: 9.375rem;
   height: 100%;
   overflow: hidden;
   background-image: url('/img/mini-donut.svg');
   background-repeat: repeat-y;
-  background-position: 20px 20px;
+  background-position: 1.25rem 1.25rem;
   animation: marquee2 50s infinite linear;
 }
 
