--- a/src/shared/components/DashedButton/DashedButton.module.css
+++ b/src/shared/components/DashedButton/DashedButton.module.css
@@ -1,21 +1,21 @@
 .common {
   position: relative;
   display: flex;
-  gap: 6px;
+  gap: 0.375rem;
   font-weight: bold;
-  border-radius: 6px;
+  border-radius: 0.375rem;
   transform-style: preserve-3d;
 }
 
 .common::before {
   position: absolute;
-  bottom: -6px;
-  left: -6px;
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
+  bottom: -0.375rem;
+  left: -0.375rem;
+  width: calc(100% + 0.25rem);
+  height: calc(100% + 0.25rem);
   content: '';
   user-select: none;
-  border-radius: 6px;
+  border-radius: 0.375rem;
   transition: all 0.5s;
-  transform: translateZ(-1px);
+  transform: translateZ(-0.0625rem);
 }
