--- a/src/shared/components/StandardButton/StandardButton.module.css
+++ b/src/shared/components/StandardButton/StandardButton.module.css
@@ -3,25 +3,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-right: 1rem;
+  padding-left: 1rem;
   font-weight: bold;
   line-height: 133%;
-  border-radius: 6px;
+  border-radius: 0.375rem;
   transition: all 0.5s;
   transform-style: preserve-3d;
 }
 
 .common::before {
   position: absolute;
-  bottom: -4px;
-  left: -4px;
+  bottom: -0.25rem;
+  left: -0.25rem;
   width: 100%;
   height: 100%;
   content: '';
-  border-radius: 6px;
+  border-radius: 0.375rem;
   transition: all 0.5s;
-  transform: translateZ(-1px);
+  transform: translateZ(-0.0625rem);
 }
 
 .common:disabled {
