--- a/src/shared/components/DashedButton/DashedButton.module.css
+++ b/src/shared/components/DashedButton/DashedButton.module.css
@@ -2,6 +2,8 @@
   position: relative;
   display: flex;
   gap: 0.375rem;
+  padding: 10px 40px 10px 20px;
+  font-size: 20px;
   font-weight: bold;
   border-radius: 0.375rem;
   transform-style: preserve-3d;
