--- a/src/shared/components/PrivateProjectsActions/PrivateProjectsActions.module.css
+++ b/src/shared/components/PrivateProjectsActions/PrivateProjectsActions.module.css
@@ -1,3 +1,13 @@
 .link {
+  display: flex;
+  gap: 24px;
+  justify-items: center;
+  margin-top: 24px;
+  font-size: 20px;
+  font-weight: bold;
   overflow-wrap: anywhere;
+
+  @media (width <= 1280px) {
+    flex-direction: column;
+  }
 }
