- replace mobile first with desktop first in some places - fixed type of lode wallet - fixed styles of ConnectWalletModal

--- a/src/shared/components/DoubleBorderedButton/DoubleBorderedButton.module.css
+++ b/src/shared/components/DoubleBorderedButton/DoubleBorderedButton.module.css
@@ -1,6 +1,7 @@
 .common {
   position: relative;
   font-weight: bold;
+  text-align: center;
   border-radius: 0.375rem;
   transform-style: preserve-3d;
 }
