--- a/src/shared/components/DashedButton/DashedButton.module.css
+++ b/src/shared/components/DashedButton/DashedButton.module.css
@@ -2,8 +2,8 @@
   position: relative;
   display: flex;
   gap: 0.375rem;
-  padding: 10px 40px 10px 20px;
-  font-size: 20px;
+  padding: 0.625rem 2.5rem 0.625rem 1.25rem;
+  font-size: 1.25rem;
   font-weight: bold;
   border-radius: 0.375rem;
   transform-style: preserve-3d;
