--- a/src/shared/components/ModalProjectCreated/ModalProjectCreated.module.css
+++ b/src/shared/components/ModalProjectCreated/ModalProjectCreated.module.css
@@ -1,6 +1,6 @@
 .link {
-  margin-bottom: 24px;
-  font-size: 20px;
+  margin-bottom: 1.5rem;
+  font-size: 1.25rem;
   font-weight: bold;
   text-align: center;
   overflow-wrap: anywhere;
