--- a/src/shared/components/ActionDonuts/styles.module.css
+++ b/src/shared/components/ActionDonuts/styles.module.css
@@ -6,7 +6,7 @@
   background-repeat: repeat;
   background-size: 7.1875rem;
 
-  @media (width <= 80rem) {
+  @media (width <= 1280px) {
     position: absolute;
   }
 }
