--- a/src/shared/components/Input/styles.module.css
+++ b/src/shared/components/Input/styles.module.css
@@ -4,14 +4,15 @@
   padding: 0.8125rem 1rem;
   font-size: 1.25rem;
   background-color: transparent;
+  border-width: 0.125rem;
   border-radius: 0.375rem;
   outline: none;
 }
 
 .input::placeholder {
-  font-family: var(--microsoft-ya-hei-font);
   font-size: 1.25rem;
-  color: #29dea8;
+
+  @apply font-microsoft-ya-hei text-green;
 }
 
 .input:disabled {
